--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
         <h1 id="course-information">Course information</h1>
 <p>Please check this website regularly for any updates, especially for announcements and exercises and for Google form links for assignment/quiz submissions.</p>
 <h2 id="grading-scheme">Grading scheme</h2>
-<ul>
-<li>Quizzes / assignments / presentations etc.: 20%</li>
-<li>Midsem 1: 20%</li>
-<li>Midsem 2: 20%</li>
-<li>Final: 40%</li>
-</ul>
+<p><strong>IMPORTANT</strong>: Changed because there will be only one mid-semester examination</p>
 <h2 id="reference-bookslinks">Reference books/links</h2>
 <ul>
 <li>Andrew Pressley. <em>Elementary Differential Geometry</em>.</li>
