Finalized grading scheme

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 <p>Please check this website regularly for any updates, especially for announcements and exercises and for Google form links for assignment/quiz submissions.</p>
 <h2 id="grading-scheme">Grading scheme</h2>
 <p><strong>IMPORTANT</strong>: Changed because there will be only one mid-semester examination</p>
+<ul>
+<li>Midsem: 25%</li>
+<li>Final: 40%</li>
+<li>Quizzes / assignments 35%</li>
+</ul>
 <h2 id="reference-bookslinks">Reference books/links</h2>
 <ul>
 <li>Andrew Pressley. <em>Elementary Differential Geometry</em>.</li>
