--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <ul>
 <li>Midsem: 25%</li>
 <li>Final: 40%</li>
-<li>Quizzes / assignments 35%</li>
+<li>Quizzes / assignments: 35%</li>
 </ul>
 <h2 id="reference-bookslinks">Reference books/links</h2>
 <ul>
