--- a/assignments/exercise01.html
+++ b/assignments/exercise01.html
@@ -70,8 +70,8 @@
     
         <li>
           <a href="../assignments/exercise01.html">Exercise sheet 1</a>
-	  
-	  (<a href="../assignments/pdfs/exercise01.pdf">PDF file</a>)
+	   /
+	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
 	  
         </li>
     
