--- a/slides.html
+++ b/slides.html
@@ -65,8 +65,8 @@ Ideally, view these slides in presentation mode on your PDF viewer (F5 in some v
     
         <li>
           <a href="./assignments/exercise01.html">Exercise sheet 1</a>
-	  
-	  (<a href="./assignments/pdfs/exercise01.pdf">PDF file</a>)
+	   /
+	  <a href="./assignments/pdfs/exercise01.pdf">PDF version</a>
 	  
         </li>
     
