Exercise sheets title

--- a/assignments.html
+++ b/assignments.html
@@ -36,7 +36,7 @@
     </nav>
     </div>
     <section id="pagecontent">
-        <h1>Assignments</h1>
+        <h1>Exercise sheets</h1>
 <ul>
     
         <li>
