--- a/assignments/exercise01.html
+++ b/assignments/exercise01.html
@@ -47,7 +47,7 @@
         <ol>
 <li><p>Find a parametrization <span class="math inline">\(\gamma(t)\)</span> for a line segment joining two given points <span class="math inline">\((x_1. y_1)\)</span> and <span class="math inline">\((x_2. y_2)\)</span>. Find <span class="math inline">\(\dot{\gamma}(t)\)</span>.</p></li>
 <li><p>What does the parametrization trace out <span class="math inline">\(\gamma(t) = (\frac{2t}{1+t^2}, \frac{1-t^2}{1+t^2})\)</span>?</p></li>
-<li><p>Show that the parametrization <span class="math inline">\(\gamma(t) := (t^2 - 1, t(t^2 - 1))\)</span> is not injective, i.e. there are two <em>distinct</em> real numbers <span class="math inline">\(t_1\)</span> and <span class="math inline">\(t_2\)</span> so that <span class="math inline">\(\gamma(t_1) = \gamma(t_2)\)</span>. Can you deduce the shape of this curve? Can you express the set of points defined by this curve as the zero set of some function <span class="math inline">\(f(x,y)\)</span>?</p></li>
+<li><p>Show that the parametrization <span class="math inline">\(\gamma(t) := (t^2 - 1, t(t^2 - 1))\)</span> is not injective, i.e. there are two <em>distinct</em> real numbers <span class="math inline">\(t_1\)</span> and <span class="math inline">\(t_2\)</span> so that <span class="math inline">\(\gamma(t_1) = \gamma(t_2)\)</span>. Can you deduce the shape<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> of this curve? Can you express the set of points defined by this curve as the zero set<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a> of some function <span class="math inline">\(f(x,y)\)</span>?</p></li>
 <li><p>Remember that <span class="math inline">\(\mathbb{R}^2\)</span> can be given the structure of a vector space by defining, <span class="math inline">\((x_1,y_1) + (x_2,y_2) := (x_1+x_2, y_1 + y_2)\)</span> (vector addition) and <span class="math inline">\(c(x,y) := (cx, cy)\)</span> (scalar multiplication) for some real number <span class="math inline">\(c\)</span>. Let <span class="math inline">\(\mathbf{v}_1 : (\alpha, \beta) \to \mathbb{R}^2\)</span> and <span class="math inline">\(\mathbf{v}_2 : (\alpha, \beta) \to \mathbb{R}^2\)</span> be smooth “vector valued” functions.</p>
 <ol>
 <li><p><span class="math inline">\((\mathbf{v}_1(t) + \mathbf{v}_2(t))' = \mathbf{v}_1'(t) + \mathbf{v}_2'(t)\)</span></p></li>
@@ -58,6 +58,13 @@
 <li><p>During the lecture we defined <span class="math inline">\(\mathbf{v}'(t)\)</span>, where <span class="math inline">\(\mathbf{v}(t) = (f(t), g(t))\)</span> to be <span class="math inline">\((f'(t), g'(t))\)</span>. Show that, <span class="math display">\[\mathbf{v}'(t) = \lim_{h\to 0} 1/h (\mathbf{v}(t+h) - \mathbf{v}(t))\]</span> Remember that the subtraction above is vector subtraction and the multiplication by <span class="math inline">\(1/h\)</span> is scalar multiplication.</p></li>
 </ol></li>
 </ol>
+<section class="footnotes" role="doc-endnotes">
+<hr />
+<ol>
+<li id="fn1" role="doc-endnote"><p>Just a rough drawing showing where the curve intersects the axes and where it self-intersects etc.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn2" role="doc-endnote"><p>The zero set of a function <span class="math inline">\(f : \mathbb{R}^2 \to \mathbb{R}\)</span> is <span class="math inline">\(\{(x,y) \ |\ f(x,y) = 0\}\)</span>, i.e. the set of points <span class="math inline">\((x,y)\)</span> in the plane for which <span class="math inline">\(f(x,y)=0\)</span><a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+</ol>
+</section>
     </section>
 </article>
 
