Exercise sheet 2 started

--- a/assignments/exercise01.html
+++ b/assignments/exercise01.html
@@ -41,6 +41,7 @@
         <h1>Exercise sheet 1</h1>
     </section>
     <section>
+<p class="date"><strong>Last modified: 03:10 PM - 13 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
 	  
@@ -76,9 +77,9 @@
 <ul>
     
         <li>
-          <a href="../assignments/exercise01.html">Exercise sheet 1</a>
+          <a href="../assignments/exercise02.html">Exercise sheet 2</a>
 	   /
-	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/exercise02.pdf">PDF version</a>
 	  
         </li>
     
