--- a/assignments/exercise02.html
+++ b/assignments/exercise02.html
@@ -41,12 +41,12 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 03:50 PM - 13 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 03:52 PM - 13 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/exercise02.pdf">PDF version</a>
 	  
         <ol>
-<li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span></p></li>
+<li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span>.</p></li>
 <li><p>If <span class="math inline">\(\mathbf{n} : (\alpha,\beta) \to \mathbf{R}^2\)</span> is such that <span class="math inline">\(||\mathbf{n}(t)||\)</span> is constant, then prove that <span class="math inline">\(\dot{\mathbf{n}}(t)\)</span> is either 0 or perpendicular to <span class="math inline">\(\mathbf{n}(t)\)</span>.</p></li>
 </ol>
 <p>To be updated...</p>
