--- a/assignments/exercise01.html
+++ b/assignments/exercise01.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 1</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 03:10 PM - 13 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 05:23 PM - 13 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
 	  
@@ -49,7 +49,7 @@
 <li><p>Find a parametrization <span class="math inline">\(\gamma(t)\)</span> for a line segment joining two given points <span class="math inline">\((x_1. y_1)\)</span> and <span class="math inline">\((x_2. y_2)\)</span>. Find <span class="math inline">\(\dot{\gamma}(t)\)</span>.</p></li>
 <li><p>What does the parametrization trace out <span class="math inline">\(\gamma(t) = (\frac{2t}{1+t^2}, \frac{1-t^2}{1+t^2})\)</span>?</p></li>
 <li><p>Show that the parametrization <span class="math inline">\(\gamma(t) := (t^2 - 1, t(t^2 - 1))\)</span> is not injective, i.e. there are two <em>distinct</em> real numbers <span class="math inline">\(t_1\)</span> and <span class="math inline">\(t_2\)</span> so that <span class="math inline">\(\gamma(t_1) = \gamma(t_2)\)</span>. Can you deduce the shape<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> of this curve? Can you express the set of points defined by this curve as the zero set<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a> of some function <span class="math inline">\(f(x,y)\)</span>?</p></li>
-<li><p>Remember that <span class="math inline">\(\mathbb{R}^2\)</span> can be given the structure of a vector space by defining, <span class="math inline">\((x_1,y_1) + (x_2,y_2) := (x_1+x_2, y_1 + y_2)\)</span> (vector addition) and <span class="math inline">\(c(x,y) := (cx, cy)\)</span> (scalar multiplication) for some real number <span class="math inline">\(c\)</span>. Let <span class="math inline">\(\mathbf{v}_1 : (\alpha, \beta) \to \mathbb{R}^2\)</span> and <span class="math inline">\(\mathbf{v}_2 : (\alpha, \beta) \to \mathbb{R}^2\)</span> be smooth “vector valued” functions.</p>
+<li><p>Remember that <span class="math inline">\(\mathbb{R}^2\)</span> can be given the structure of a vector space by defining, <span class="math inline">\((x_1,y_1) + (x_2,y_2) := (x_1+x_2, y_1 + y_2)\)</span> (vector addition) and <span class="math inline">\(c(x,y) := (cx, cy)\)</span> (scalar multiplication) for some real number <span class="math inline">\(c\)</span>. Let <span class="math inline">\(\mathbf{v}_1 : (\alpha, \beta) \to \mathbb{R}^2\)</span> and <span class="math inline">\(\mathbf{v}_2 : (\alpha, \beta) \to \mathbb{R}^2\)</span> be smooth “vector valued” functions. Show that,</p>
 <ol>
 <li><p><span class="math inline">\((\mathbf{v}_1(t) + \mathbf{v}_2(t))' = \mathbf{v}_1'(t) + \mathbf{v}_2'(t)\)</span></p></li>
 <li><p><span class="math inline">\((\mathbf{v}_1(t) - \mathbf{v}_2(t))' = \mathbf{v}_1'(t) + \mathbf{v}_2'(t)\)</span></p></li>
