--- a/assignments/exercise02.html
+++ b/assignments/exercise02.html
@@ -70,6 +70,17 @@
 	  
         </li>
     
+        <li>
+          <a href="../assignments/exercise01.html">Exercise sheet 1</a>
+	   /
+	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
+	  
+	  <br /> 
+	   (<a href="../assignments/solutions/exercise01.html">Hints or Solutions</a> /
+	  <a href="../assignments/solutions/pdfs/exercise01.pdf">Hints or Solutions PDF</a>)
+	  
+        </li>
+    
 </ul>
 
     <p><a href="../assignments.html">All exercise sheets&hellip;</a></p>
