--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@ Room 7: MS20207</p>
 	  
         </li>
     
+        <li>
+          <a href="./assignments/exercise01.html">Exercise sheet 1</a>
+	   /
+	  <a href="./assignments/pdfs/exercise01.pdf">PDF version</a>
+	  
+	  <br /> 
+	   (<a href="./assignments/solutions/exercise01.html">Hints or Solutions</a> /
+	  <a href="./assignments/solutions/pdfs/exercise01.pdf">Hints or Solutions PDF</a>)
+	  
+        </li>
+    
 </ul>
 
     <p><a href="./assignments.html">All exercise sheets&hellip;</a></p>
