Hints or Solutions title

--- a/assignments/exercise01.html
+++ b/assignments/exercise01.html
@@ -47,8 +47,8 @@
 	  
 	  
 	  <br />
-	  <a href="../assignments/solutions/exercise01.html">Solutions</a> / 
-	  <a href="../assignments/solutions/pdfs/exercise01.pdf">Solutions PDF</a>
+	  <a href="../assignments/solutions/exercise01.html">Hints or Solutions</a> / 
+	  <a href="../assignments/solutions/pdfs/exercise01.pdf">Hints or Solutions PDF</a>
 	  
         <ol>
 <li><p>Find a parametrization <span class="math inline">\(\gamma(t)\)</span> for a line segment joining two given points <span class="math inline">\((x_1. y_1)\)</span> and <span class="math inline">\((x_2. y_2)\)</span>. Find <span class="math inline">\(\dot{\gamma}(t)\)</span>.</p></li>
