rss and atom feeds

--- a/assignments/exercise02.html
+++ b/assignments/exercise02.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 04:33 PM - 16 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 12:18 AM - 18 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/exercise02.pdf">PDF version</a>
 	  
