better rss/atom title

--- a/assignments/exercise02.html
+++ b/assignments/exercise02.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 12:18 AM - 18 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 01:04 AM - 18 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/exercise02.pdf">PDF version</a>
 	  
@@ -71,13 +71,10 @@
         </li>
     
         <li>
-          <a href="../assignments/exercise01.html">Exercise sheet 1</a>
+          <a href="../assignments/2021-09-13-exercise02.html">Exercise sheet 2</a>
 	   /
-	  <a href="../assignments/pdfs/exercise01.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
 	  
-	  <br /> 
-	   (<a href="../assignments/solutions/exercise01.html">Hints or Solutions</a> /
-	  <a href="../assignments/solutions/pdfs/exercise01.pdf">Hints or Solutions PDF</a>)
 	  
         </li>
     
