Added an exercise

--- a/assignments/2021-09-13-exercise02.html
+++ b/assignments/2021-09-13-exercise02.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 01:11 AM - 18 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 11:39 AM - 20 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
 	  
@@ -50,6 +50,7 @@
 <li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span>.</p></li>
 <li><p>If <span class="math inline">\(\mathbf{n} : (\alpha,\beta) \to \mathbf{R}^2\)</span> is such that <span class="math inline">\(||\mathbf{n}(t)||\)</span> is constant, then prove that <span class="math inline">\(\dot{\mathbf{n}}(t)\)</span> is either 0 or perpendicular to <span class="math inline">\(\mathbf{n}(t)\)</span>.</p></li>
 <li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span> (Assume that all the functions are smooth).</p></li>
+<li><p><span class="math display">\[s_\alpha(t) := \int_{t_\alpha}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> <span class="math display">\[s_\beta(t) := \int_{t_\beta}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> Prove that <span class="math inline">\(s_\beta(t) - s_\alpha(t)\)</span> is a constant.</p></li>
 </ol>
 <p>To be updated...</p>
     </section>
