--- a/assignments/2021-09-13-exercise02.html
+++ b/assignments/2021-09-13-exercise02.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 11:39 AM - 20 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 03:22 PM - 20 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
 	  
@@ -50,7 +50,13 @@
 <li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span>.</p></li>
 <li><p>If <span class="math inline">\(\mathbf{n} : (\alpha,\beta) \to \mathbf{R}^2\)</span> is such that <span class="math inline">\(||\mathbf{n}(t)||\)</span> is constant, then prove that <span class="math inline">\(\dot{\mathbf{n}}(t)\)</span> is either 0 or perpendicular to <span class="math inline">\(\mathbf{n}(t)\)</span>.</p></li>
 <li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span> (Assume that all the functions are smooth).</p></li>
-<li><p><span class="math display">\[s_\alpha(t) := \int_{t_\alpha}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> <span class="math display">\[s_\beta(t) := \int_{t_\beta}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> Prove that <span class="math inline">\(s_\beta(t) - s_\alpha(t)\)</span> is a constant.</p></li>
+<li><p>If we denote, <span class="math display">\[s_\alpha(t) := \int_{t_\alpha}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> <span class="math display">\[s_\beta(t) := \int_{t_\beta}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> Prove that <span class="math inline">\(s_\beta(t) - s_\alpha(t)\)</span> is a constant.</p></li>
+<li><p>If <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span> is a smooth parametrization, then show that <span class="math inline">\(| |\dot{\gamma}(t)| | : (\alpha, \beta) \to \mathbb{R}\)</span> is smooth.</p></li>
+<li><p>For the parametrization <span class="math inline">\(\gamma : (-\pi/2, \pi/2) \to \mathbb{R}^2\)</span> given by <span class="math inline">\(\gamma(t) = (5\cos(t), 5\sin(t))\)</span>,</p>
+<ol>
+<li><p>Find the arc-length function <span class="math inline">\(s(t)\)</span> (starting at, say, 0)</p></li>
+<li><p>Find a reparametrization map <span class="math inline">\(\phi\)</span> so that <span class="math inline">\(\gamma(\phi(t))\)</span> is a unit-speed parametrization.</p></li>
+</ol></li>
 </ol>
 <p>To be updated...</p>
     </section>
