--- a/announcements/2021-09-16-quiz.html
+++ b/announcements/2021-09-16-quiz.html
@@ -1,1 +1,1 @@
-<div class="announcement"><p><span style="color:red"><strong>Quiz</strong></span> is <span style="color:red"><strong>finalized</strong></span> for Friday, the 24th of September.</p></div> <br /><span class="date">Last modified: 05:26 PM - 20 September, 2021 </span>
+<div class="announcement"><p>The <span style="color:red"><strong>quiz</strong></span> is <span style="color:red"><strong>finalized</strong></span> for Friday, the 24th of September.</p></div> <br /><span class="date">Last modified: 01:46 AM - 21 September, 2021 </span>
