--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <p>Please check this website regularly for any updates, especially for announcements and exercises and for Google form links for assignment/quiz submissions.</p>
 <h2 id="tutorial-room-assignments">Tutorial room assignments</h2>
 <p>Room 1 : MS19 - MS20027<br />
-Room 2: MS20028 - 200063<br />
-Room 3: 20064 - MS20098<br />
+Room 2: MS20028 - MS20063<br />
+Room 3: MS20064 - MS20098<br />
 Room 4: MS20099 - MS20133<br />
 Room 5: MS20134 - MS20175<br />
 Room 6: MS20176 - MS20206<br />
