corrected roll numbers again

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 <h1 id="course-information">Course information</h1>
 <p>Please check this website regularly for any updates, especially for announcements and exercises and for Google form links for assignment/quiz submissions.</p>
 <h2 id="tutorial-room-assignments">Tutorial room assignments</h2>
-<p>Room 1 : MS19 - MS20027<br />
+<p>Room 1: MS19 - MS20027<br />
 Room 2: MS20028 - MS20063<br />
 Room 3: MS20064 - MS20098<br />
 Room 4: MS20099 - MS20133<br />
 Room 5: MS20134 - MS20175<br />
 Room 6: MS20176 - MS20206<br />
-Room 7: MS20207</p>
+Room 7: MS20207 -</p>
 <h2 id="grading-scheme">Grading scheme</h2>
 <ul>
 <li>Midsem: 25%</li>
