Removed update notification

--- a/assignments/2021-09-13-exercise02.html
+++ b/assignments/2021-09-13-exercise02.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 2</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 04:05 PM - 23 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 11:42 AM - 24 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
 	  
@@ -58,7 +58,6 @@
 <li><p>Find a reparametrization map <span class="math inline">\(\phi\)</span> so that <span class="math inline">\(\gamma(\phi(t))\)</span> is a unit-speed parametrization.</p></li>
 </ol></li>
 </ol>
-<p>To be updated...</p>
     </section>
 </article>
 
