--- a/assignments/2021-09-24-exercise03.html
+++ b/assignments/2021-09-24-exercise03.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>2021-09-13-exercise02 - MTH201</title>
+  <title>2021-09-24-exercise03 - MTH201</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
@@ -38,29 +38,27 @@
     <section id="pagecontent">
         <article>
     <section class="header">
-        <h1>Exercise sheet 2</h1>
+        <h1>Exercise sheet 3</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 05:01 PM - 24 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 02:09 PM - 24 September, 2021 </strong></p>
 	  
-	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2021-09-24-exercise03.pdf">PDF version</a>
 	  
-	  
-	  <br />
-	  <a href="../assignments/solutions/2021-09-13-exercise02.html">Hints or Solutions</a> / 
-	  <a href="../assignments/solutions/pdfs/2021-09-13-exercise02.pdf">Hints or Solutions PDF</a>
 	  
         <ol>
-<li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span>.</p></li>
-<li><p>If <span class="math inline">\(\mathbf{n} : (\alpha,\beta) \to \mathbf{R}^2\)</span> is such that <span class="math inline">\(||\mathbf{n}(t)||\)</span> is constant, then prove that <span class="math inline">\(\dot{\mathbf{n}}(t)\)</span> is either 0 or perpendicular to <span class="math inline">\(\mathbf{n}(t)\)</span>.</p></li>
-<li><p>if we denote, <span class="math display">\[s_\alpha(t) := \int_{t_\alpha}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> <span class="math display">\[s_\beta(t) := \int_{t_\beta}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> prove that <span class="math inline">\(s_\beta(t) - s_\alpha(t)\)</span> is a constant <strong>(assume that <span class="math inline">\(t_\alpha &lt; t_\beta\)</span>)</strong>.</p></li>
-<li><p>If <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span> is a smooth <strong>and regular</strong> parametrization, then show that <span class="math inline">\(| |\dot{\gamma}(t)| | : (\alpha, \beta) \to \mathbb{R}\)</span> is smooth.</p></li>
-<li><p>For the parametrization <span class="math inline">\(\gamma : (-\pi/2, \pi/2) \to \mathbb{R}^2\)</span> given by <span class="math inline">\(\gamma(t) = (5\cos(t), 5\sin(t))\)</span>,</p>
+<li><p>In an earlier exercise you found the parametrization of a line segment joining two points. Use that parametrization to find the arc length of the line segment in terms of its end points. Try with some other parametrization too.</p></li>
+<li><p>These steps will show that the line segment joining two points is the shortest possible curve joining the two points:</p>
 <ol>
-<li><p>Find the arc-length function <span class="math inline">\(s(t)\)</span> (starting at, say, 0)</p></li>
-<li><p>Find a reparametrization map <span class="math inline">\(\phi\)</span> so that <span class="math inline">\(\gamma(\phi(t))\)</span> is a unit-speed parametrization.</p></li>
+<li><p>Show that <span class="math inline">\(\mathbf{v}. \mathbf{w} \leq \|\mathbf{v} \| \|\mathbf{w}  \|\)</span> for any two vectors <span class="math inline">\(\mathbf{v}\)</span> and <span class="math inline">\(\mathbf{w}\)</span></p></li>
+<li><p>Show that <span class="math inline">\(\|\mathbf{v} \| = \mathbf{v} . \frac{\mathbf{v} }{\|\mathbf{v}\| }\)</span>. This provides another way to obtain the norm of a vector: take its dot product with a unit vector in the same direction.</p></li>
+<li><p>The previous part shows that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| = (\gamma(t_1) - \gamma(t_0))  . \frac{\gamma(t_1) - \gamma(t_0)}{\| \gamma(t_1) - \gamma(t_0) \|}\)</span>. Now use the fundamental theorem of calculus to (carefully!) prove that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| = \int_{t_0}^{t_1} \dot{\gamma}(t)  . \frac{\gamma(t_1) - \gamma(t_0)}{\| \gamma(t_1) - \gamma(t_0) \|}\mathrm{d}t\)</span></p></li>
+<li><p>Use the previous and first part to prove that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| \leq \int_{t_0}^{t_1} \|\dot{\gamma}(t)\|\mathrm{d}t\)</span>. Note that this shows that the distance between the end points is always less than or equal to the arc length of a curve joining the two end points.</p></li>
 </ol></li>
+<li><p>If a parametrization <span class="math inline">\(\gamma :(\alpha,\beta) \to \mathbb{R}^3\)</span> satisfies the condition that <span class="math inline">\(\|\ddot{\gamma}(t)\| = 0\)</span> for all <span class="math inline">\(t\)</span>, what kind of curve will it trace out?</p></li>
+<li><p>If a parametrization <span class="math inline">\(\gamma :(\alpha,\beta) \to \mathbb{R}^3\)</span> satisfies the condition that <span class="math inline">\(\ddot{\gamma}(t)\)</span> is constant, what kind of curve will it trace out?</p></li>
 </ol>
+<p>to be updated...</p>
     </section>
 </article>
 
