next exercise set

--- a/assignments/2021-10-01-exercise04.html
+++ b/assignments/2021-10-01-exercise04.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>2021-09-13-exercise02 - MTH201</title>
+  <title>2021-10-01-exercise04 - MTH201</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
@@ -38,29 +38,20 @@
     <section id="pagecontent">
         <article>
     <section class="header">
-        <h1>Exercise sheet 2</h1>
+        <h1>Exercise sheet 4</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 05:01 PM - 24 September, 2021 </strong></p>
+<p class="date"><strong>Last modified: 01:41 AM -  3 October, 2021 </strong></p>
 	  
-	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2021-10-01-exercise04.pdf">PDF version</a>
 	  
-	  
-	  <br />
-	  <a href="../assignments/solutions/2021-09-13-exercise02.html">Hints or Solutions</a> / 
-	  <a href="../assignments/solutions/pdfs/2021-09-13-exercise02.pdf">Hints or Solutions PDF</a>
 	  
         <ol>
-<li><p>For <span class="math inline">\(\mathbf{v} : (\alpha,\beta) \to \mathbf{R}^2\)</span> and <span class="math inline">\(\mathbf{w} : (\alpha,\beta) \to \mathbf{R}^2\)</span>, show that <span class="math inline">\((\mathbf{v}(t). \mathbf{w}(t))' = \mathbf{v}'(t). \mathbf{w}(t) + \mathbf{v}(t). \mathbf{w}'(t)\)</span>.</p></li>
-<li><p>If <span class="math inline">\(\mathbf{n} : (\alpha,\beta) \to \mathbf{R}^2\)</span> is such that <span class="math inline">\(||\mathbf{n}(t)||\)</span> is constant, then prove that <span class="math inline">\(\dot{\mathbf{n}}(t)\)</span> is either 0 or perpendicular to <span class="math inline">\(\mathbf{n}(t)\)</span>.</p></li>
-<li><p>if we denote, <span class="math display">\[s_\alpha(t) := \int_{t_\alpha}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> <span class="math display">\[s_\beta(t) := \int_{t_\beta}^t| | \dot{\gamma}(u)| | \mathrm{d}u\]</span> prove that <span class="math inline">\(s_\beta(t) - s_\alpha(t)\)</span> is a constant <strong>(assume that <span class="math inline">\(t_\alpha &lt; t_\beta\)</span>)</strong>.</p></li>
-<li><p>If <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span> is a smooth <strong>and regular</strong> parametrization, then show that <span class="math inline">\(| |\dot{\gamma}(t)| | : (\alpha, \beta) \to \mathbb{R}\)</span> is smooth.</p></li>
-<li><p>For the parametrization <span class="math inline">\(\gamma : (-\pi/2, \pi/2) \to \mathbb{R}^2\)</span> given by <span class="math inline">\(\gamma(t) = (5\cos(t), 5\sin(t))\)</span>,</p>
-<ol>
-<li><p>Find the arc-length function <span class="math inline">\(s(t)\)</span> (starting at, say, 0)</p></li>
-<li><p>Find a reparametrization map <span class="math inline">\(\phi\)</span> so that <span class="math inline">\(\gamma(\phi(t))\)</span> is a unit-speed parametrization.</p></li>
-</ol></li>
+<li><p>Show that the curvature at any point of a line segment is always 0.</p></li>
+<li><p>Find a parametrization of an ellipse, i.e. <span class="math inline">\(\{(x,y) \in \mathbb{R}^2 \ |\ \frac{x^2}{a} + \frac{y^2}{b} = 1\}\)</span> and use it compute its curvature function <span class="math inline">\(\kappa(t)\)</span>.</p></li>
+<li><p>Given <em>any</em> smooth parametrization, <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span>, is the curvature function <span class="math inline">\(\kappa(t)\)</span> always smooth? Do you need to add some condition? What is it?</p></li>
 </ol>
+<p>to be updated...</p>
     </section>
 </article>
 
