--- a/assignments/2021-10-01-exercise04.html
+++ b/assignments/2021-10-01-exercise04.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 4</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 01:41 AM -  3 October, 2021 </strong></p>
+<p class="date"><strong>Last modified: 11:55 AM -  5 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-01-exercise04.pdf">PDF version</a>
 	  
@@ -50,6 +50,11 @@
 <li><p>Show that the curvature at any point of a line segment is always 0.</p></li>
 <li><p>Find a parametrization of an ellipse, i.e. <span class="math inline">\(\{(x,y) \in \mathbb{R}^2 \ |\ \frac{x^2}{a} + \frac{y^2}{b} = 1\}\)</span> and use it compute its curvature function <span class="math inline">\(\kappa(t)\)</span>.</p></li>
 <li><p>Given <em>any</em> smooth parametrization, <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span>, is the curvature function <span class="math inline">\(\kappa(t)\)</span> always smooth? Do you need to add some condition? What is it?</p></li>
+<li><p>Compute the signed curvature of the circle parametrized by <span class="math inline">\(\gamma(t) = (5\mathrm{cos}(t), -5\mathrm{sin}(t))\)</span>.</p></li>
+<li><p>If <span class="math inline">\(\gamma : (\alpha, \beta) \to \mathbb{R}^2\)</span> parametrizes a curve, compute the curvature of the curve parametrized by <span class="math inline">\(\tilde{\gamma}(t) = \gamma(-t)\)</span> in terms of the curvature of <span class="math inline">\(\gamma\)</span>. What about the relation between the signed curvatures of <span class="math inline">\(\gamma\)</span> and <span class="math inline">\(\tilde{\gamma}\)</span>?</p></li>
+<li><p>Compare the signed curvatures of a curve and its reflection, i.e. <span class="math inline">\(\gamma(t)\)</span> and <span class="math inline">\(-\gamma(t)\)</span>.</p></li>
+<li><p>By finding a unit speed parametrization of a circle of radius <span class="math inline">\(r\)</span>, compute its curvature. Let <span class="math inline">\(\gamma(t)\)</span> be some other *constant* speed parametrization of a circle of radius <span class="math inline">\(r\)</span>, where <span class="math inline">\(v := \|\dot{\gamma}(t)\|\)</span> is the (constant) speed, and prove that <span class="math inline">\(\|\ddot{\gamma}(t)\| = v^2/r\)</span> (Do you recognize the significance of this?).</p></li>
+<li><p>Can you draw a curve whose signed curvature in terms of a unit speed parametrization is <span class="math inline">\(\kappa_s(t)=t\)</span>?</p></li>
 </ol>
 <p>to be updated...</p>
     </section>
