--- a/assignments/2021-10-01-exercise04.html
+++ b/assignments/2021-10-01-exercise04.html
@@ -41,7 +41,7 @@
         <h1>Exercise sheet 4</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 11:55 AM -  5 October, 2021 </strong></p>
+<p class="date"><strong>Last modified: 12:09 PM -  5 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-01-exercise04.pdf">PDF version</a>
 	  
@@ -55,8 +55,12 @@
 <li><p>Compare the signed curvatures of a curve and its reflection, i.e. <span class="math inline">\(\gamma(t)\)</span> and <span class="math inline">\(-\gamma(t)\)</span>.</p></li>
 <li><p>By finding a unit speed parametrization of a circle of radius <span class="math inline">\(r\)</span>, compute its curvature. Let <span class="math inline">\(\gamma(t)\)</span> be some other *constant* speed parametrization of a circle of radius <span class="math inline">\(r\)</span>, where <span class="math inline">\(v := \|\dot{\gamma}(t)\|\)</span> is the (constant) speed, and prove that <span class="math inline">\(\|\ddot{\gamma}(t)\| = v^2/r\)</span> (Do you recognize the significance of this?).</p></li>
 <li><p>Can you draw a curve whose signed curvature in terms of a unit speed parametrization is <span class="math inline">\(\kappa_s(t)=t\)</span>?</p></li>
+<li><p>This exercise will help you to simplify the general formula for curvature that we derived during the lecture.</p>
+<ol>
+<li><p>Recall the triple product identity <span class="math inline">\(\mathbf{u} \times (\mathbf{v} \times \mathbf{w}) = (\mathbf{u}\cdot \mathbf{w})\mathbf{v} - (\mathbf{u}\cdot\mathbf{v})\mathbf{w}\)</span> for any three vectors <span class="math inline">\(\mathbf{u}\)</span>, <span class="math inline">\(\mathbf{v}\)</span>, and <span class="math inline">\(\mathbf{w}\)</span>. Simplify the expression for curvature defined during the lecture so that you can use the above equation to rewrite it entirely in terms of cross products instead of dot products.</p></li>
+<li><p>For orthogonal vectors <span class="math inline">\(\mathbf{v}\)</span> and <span class="math inline">\(\mathbf{w}\)</span>, why is <span class="math inline">\(\|\mathbf{v}\times \mathbf{w}\| = \|\mathbf{v}\| \|\mathbf{w}\|\)</span>? Use this to show that the curvature of a curve parametrized by <span class="math inline">\(\gamma\)</span> can be computed at the point <span class="math inline">\(\gamma(t)\)</span> by <span class="math inline">\(\frac{\|\ddot{\gamma}(t) \times \dot{\gamma}(t)\|}{\|\dot{\gamma}(t)\|^3}\)</span>.</p></li>
+</ol></li>
 </ol>
-<p>to be updated...</p>
     </section>
 </article>
 
