--- a/assignments/2021-10-10-exercise05.html
+++ b/assignments/2021-10-10-exercise05.html
@@ -47,7 +47,7 @@
 	
 	
       </p>
-<p class="date"><strong>Last modified: 02:24 AM - 13 October, 2021 </strong></p>
+<p class="date"><strong>Last modified: 03:22 PM - 13 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-10-exercise05.pdf">PDF version</a>
 	  
@@ -83,6 +83,11 @@
 <li><p>Show that <span class="math inline">\(y_B(t) = -z_N(t)\)</span>. So the only two unknown coefficients are negatives of each other! Let us denote <span class="math inline">\(-y_B(t)\)</span> by <span class="math inline">\(\tau(t)\)</span> (the negative sign is only a convention and simplifies some notation later). <span class="math inline">\(\tau(t)\)</span> is a new term that cannot be written in terms of known terms like the curvature etc and is called the “torsion” at <span class="math inline">\(t\)</span>. We have shown that the derivatives of <span class="math inline">\(\mathbf{T}(t)\)</span>, <span class="math inline">\(\mathbf{N}(t)\)</span>, and <span class="math inline">\(\mathbf{B}(t)\)</span> can be written in terms of the basis <span class="math inline">\(\{\mathbf{T}(t), \textbf{N}(t), \mathbf{B}(t)\}\)</span> and the coefficients depend only on the curvature or the torsion.</p></li>
 </ol></li>
 <li><p>Prove that the torsion <span class="math inline">\(\tau(t)\)</span>, defined in the previous question, of a curve is the constant 0 if and only if the curve lies on a plane.</p></li>
+<li><p>If <span class="math inline">\(\mathbf{v}_1(t), \mathbf{v}_2(t), \mathbf{v}_3(t)\)</span>, denote some vector fields which are <em>not necessarily</em> <span class="math inline">\(\mathbf{T}(t), \mathbf{N}(t), \mathbf{B}(t)\)</span>, but nevertheless satisfy the same equations: <span class="math display">\[\begin{aligned}
+  \dot{\mathbf{v}_1}&amp;= \kappa(t) \mathbf{v}_2(t) \\
+    \dot{\mathbf{v}_2} &amp;=  -\kappa(t) \mathbf{v}_1(t) +  \tau(t) \mathbf{v}_3(t)  \\
+    \dot{\mathbf{v}_3} &amp;=  -\tau(t) \mathbf{v}_2(t)  \\
+  \end{aligned}\]</span> Show that <span class="math inline">\(\mathbf{v}_i(t).\mathbf{v}_j(t)\)</span> are constant for any <span class="math inline">\(i,j\)</span> (<em>Hint:</em> Product rule, of course!). So, the angles and magnitudes remain the same for all <span class="math inline">\(t\)</span>. We will see the significance of this exercise during the lecture.</p></li>
 </ol>
     </section>
 </article>
