signed vs unsigned

--- a/assignments/2021-09-13-exercise02.html
+++ b/assignments/2021-09-13-exercise02.html
@@ -127,6 +127,13 @@
 <ul>
     
         <li>
+            <a href="../posts/2021-10-16.html">Signed vs unsigned curvature</a> - 16 October, 2021 (Saturday)
+	  
+	  (<a href="posts/pdfs/2021-10-16.pdf">PDF file</a>)
+	  
+        </li>
+    
+        <li>
             <a href="../posts/2021-10-14-points-of-parametrizations.html">The same point under different parametrizations.</a> - 14 October, 2021 (Thursday)
 	  
 	  (<a href="posts/pdfs/2021-10-14-points-of-parametrizations.pdf">PDF file</a>)
