--- a/assignments/2021-10-10-exercise05.html
+++ b/assignments/2021-10-10-exercise05.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>Last modified: 03:22 PM - 13 October, 2021 </strong></p>
+<p class="date"><strong>Last modified: 05:01 PM - 15 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-10-exercise05.pdf">PDF version</a>
 	  
@@ -90,6 +90,8 @@
     \dot{\mathbf{v}_2} &amp;=  -\kappa(t) \mathbf{v}_1(t) +  \tau(t) \mathbf{v}_3(t)  \\
     \dot{\mathbf{v}_3} &amp;=  -\tau(t) \mathbf{v}_2(t)  \\
   \end{aligned}\]</span> Show that <span class="math inline">\(\mathbf{v}_i(t).\mathbf{v}_j(t)\)</span> are constant for any <span class="math inline">\(i,j\)</span> (<em>Hint:</em> Product rule, of course!). So, the angles and magnitudes remain the same for all <span class="math inline">\(t\)</span>. We will see the significance of this exercise during the lecture.</p></li>
+<li><p>Let <span class="math inline">\(\mathbf{v}(t)\)</span> denote a unit vector field. Prove that there is always a unit speed parametrization, <span class="math inline">\(\gamma\)</span> so that <span class="math inline">\(\dot{\gamma}(t)=\mathbf{v}(t)\)</span>.</p></li>
+<li><p>Consider two parametrizations, <span class="math inline">\(\gamma_1 : (\alpha,\beta) \to \mathbb{R}^3\)</span> and <span class="math inline">\(\gamma_2 : (\alpha,\beta) \to \mathbb{R}^3\)</span> (note that they have the same domains). Denote the unit tangent, unit normal, and unit binormal of <span class="math inline">\(\gamma_1\)</span> by <span class="math inline">\(\mathbf{T}_1(t)\)</span>, <span class="math inline">\(\mathbf{N}_1(t)\)</span>, and <span class="math inline">\(\mathbf{B}_1(t)\)</span>. Similarly, denote the unit tangent, unit normal, and unit binormal of <span class="math inline">\(\gamma_2\)</span> by <span class="math inline">\(\mathbf{T}_2(t)\)</span>, <span class="math inline">\(\mathbf{N}_2(t)\)</span>, and <span class="math inline">\(\mathbf{B}_2(t)\)</span>. Assume also that both parametrizations have exactly the same curvature and torsion at <span class="math inline">\(t\)</span>, i.e. <span class="math inline">\(\kappa(t)\)</span> and <span class="math inline">\(\tau(t)\)</span> and <span class="math inline">\(t\)</span>. Show that the expression <span class="math inline">\(\mathbf{T}_1(t) . \mathbf{T}_2(t) + \mathbf{N}_1(t) . \mathbf{N}_2(t) + \mathbf{B}_1(t) . \mathbf{B}_2(t)\)</span> is constant.</p></li>
 </ol>
     </section>
 </article>
@@ -145,6 +147,13 @@
 
     <h2>Recent comments</h2>
 <ul>
+    
+        <li>
+            <a href="../posts/2021-10-16.html">Signed vs unsigned curvature</a> - 16 October, 2021 (Saturday)
+	  
+	  (<a href="posts/pdfs/2021-10-16.pdf">PDF file</a>)
+	  
+        </li>
     
         <li>
             <a href="../posts/2021-10-14-points-of-parametrizations.html">The same point under different parametrizations.</a> - 14 October, 2021 (Thursday)
