--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@ Room 7: MS20207 -</p>
 <ul>
     
         <li>
+            <a href="./posts/2021-10-16.html">Signed vs unsigned curvature</a> - 16 October, 2021 (Saturday)
+	  
+	  (<a href="posts/pdfs/2021-10-16.pdf">PDF file</a>)
+	  
+        </li>
+    
+        <li>
             <a href="./posts/2021-10-14-points-of-parametrizations.html">The same point under different parametrizations.</a> - 14 October, 2021 (Thursday)
 	  
 	  (<a href="posts/pdfs/2021-10-14-points-of-parametrizations.pdf">PDF file</a>)
