prev and next for posts

--- a/assignments/2021-09-24-exercise03.html
+++ b/assignments/2021-09-24-exercise03.html
@@ -51,7 +51,7 @@
 	<a href="../assignments/2021-10-01-exercise04.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>Last modified: 02:09 PM - 24 September, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 02:09 PM - 24 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-24-exercise03.pdf">PDF version</a>
 	  
