--- a/assignments/2021-10-10-exercise05.html
+++ b/assignments/2021-10-10-exercise05.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>Last modified: 05:01 PM - 15 October, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 05:01 PM - 15 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-10-exercise05.pdf">PDF version</a>
 	  
