--- a/assignments/2021-09-10-exercise01.html
+++ b/assignments/2021-09-10-exercise01.html
@@ -49,7 +49,7 @@
 	<a href="../assignments/2021-09-13-exercise02.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>Last modified: 05:06 PM - 17 September, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 05:06 PM - 17 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-10-exercise01.pdf">PDF version</a>
 	  
