--- a/assignments/2021-09-13-exercise02.html
+++ b/assignments/2021-09-13-exercise02.html
@@ -51,7 +51,7 @@
 	<a href="../assignments/2021-09-24-exercise03.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>Last modified: 05:01 PM - 24 September, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 05:01 PM - 24 September, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-09-13-exercise02.pdf">PDF version</a>
 	  
