--- a/assignments/2021-10-01-exercise04.html
+++ b/assignments/2021-10-01-exercise04.html
@@ -51,7 +51,7 @@
 	<a href="../assignments/2021-10-10-exercise05.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>Last modified: 02:51 AM - 10 October, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 02:51 AM - 10 October, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-01-exercise04.pdf">PDF version</a>
 	  
